Arrumando sobreposição de texto do collapse e o header no mobile. Issue #443

--- a/source/assets/stylesheets/locastyle/modules/_header.sass
+++ b/source/assets/stylesheets/locastyle/modules/_header.sass
@@ -6,7 +6,7 @@ $mobile-left-number: "240px"
 	position: fixed
 	top: 0
 	left: 0
-	z-index: 1
+	z-index: 3
 	width: 100%
 	opacity: 0.95
 
